updated CSS to stop modal taking too much of the screen on larger devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -465,6 +465,6 @@ footer {
 
 @media (min-width: 1024px) {
   .modal-dialog {
-    max-width: 65%;
+    max-width: 820px;
   }
 }
